services/media/qbittorrent/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: qBittorrent
    gethomepage.dev/description: Cliente de descargas
    gethomepage.dev/group: Media
    gethomepage.dev/icon: qbittorrent.png
    gethomepage.dev/href: https://qbittorrent.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - qbittorrent.bonchan.org
  rules:
    - backendRefs:
        - name: qbittorrent
          port: 8080
